@@ -317,6 +317,18 @@ pub struct SinkPortInfo {
     pub available: ::def::PortAvailable,
 }
 
+impl From<SinkPortInfo> for SinkPortInfoInternal {
+    fn from(p: SinkPortInfo) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
+}
+
+impl From<SinkPortInfoInternal> for SinkPortInfo {
+    fn from(p: SinkPortInfoInternal) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
+}
+
 /// Stores information about sinks.
 ///
 /// Please note that this structure can be extended as part of evolutionary API updates at any time
@@ -374,6 +386,18 @@ pub struct SinkInfo {
     pub n_formats: u8,
     /// Array of formats supported by the sink.
     pub formats: *mut *mut ::format::InfoInternal,
+}
+
+impl From<SinkInfo> for SinkInfoInternal {
+    fn from(p: SinkInfo) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
+}
+
+impl From<SinkInfoInternal> for SinkInfo {
+    fn from(p: SinkInfoInternal) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
 }
 
 /// Callback prototype for
@@ -584,6 +608,18 @@ pub struct SourcePortInfo {
     pub available: ::def::PortAvailable,
 }
 
+impl From<SourcePortInfo> for SourcePortInfoInternal {
+    fn from(p: SourcePortInfo) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
+}
+
+impl From<SourcePortInfoInternal> for SourcePortInfo {
+    fn from(p: SourcePortInfoInternal) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
+}
+
 /// Stores information about sources.
 ///
 /// Please note that this structure can be extended as part of evolutionary API updates at any time
@@ -641,6 +677,18 @@ pub struct SourceInfo {
     pub n_formats: u8,
     /// Array of formats supported by the source.
     pub formats: *mut *mut ::format::InfoInternal,
+}
+
+impl From<SourceInfo> for SourceInfoInternal {
+    fn from(p: SourceInfo) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
+}
+
+impl From<SourceInfoInternal> for SourceInfo {
+    fn from(p: SourceInfoInternal) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
 }
 
 /// Callback prototype for
@@ -862,6 +910,18 @@ pub struct ServerInfo {
     pub channel_map: ::channelmap::Map,
 }
 
+impl From<ServerInfo> for ServerInfoInternal {
+    fn from(p: ServerInfo) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
+}
+
+impl From<ServerInfoInternal> for ServerInfo {
+    fn from(p: ServerInfoInternal) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
+}
+
 /// Callback prototype for
 /// [`Introspector::get_server_info`](struct.Introspector.html#method.get_server_info).
 pub type ServerInfoCb = extern "C" fn(c: *mut ContextInternal,
@@ -905,6 +965,18 @@ pub struct ModuleInfo {
     pub auto_unload: i32,
     /// Property list.
     pub proplist: *mut ::proplist::ProplistInternal,
+}
+
+impl From<ModuleInfo> for ModuleInfoInternal {
+    fn from(p: ModuleInfo) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
+}
+
+impl From<ModuleInfoInternal> for ModuleInfo {
+    fn from(p: ModuleInfoInternal) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
 }
 
 /// Callback prototype for
@@ -996,6 +1068,18 @@ pub struct ClientInfo {
     pub proplist: *mut ::proplist::ProplistInternal,
 }
 
+impl From<ClientInfo> for ClientInfoInternal {
+    fn from(p: ClientInfo) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
+}
+
+impl From<ClientInfoInternal> for ClientInfo {
+    fn from(p: ClientInfoInternal) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
+}
+
 /// Callback prototype for
 /// [`Introspector::get_client_info`](struct.Introspector.html#method.get_client_info) and friends.
 pub type ClientInfoCb = extern "C" fn(c: *mut ContextInternal,
@@ -1078,6 +1162,18 @@ pub struct CardPortInfo {
     pub profiles2: *mut *mut CardProfileInfo2,
 }
 
+impl From<CardPortInfo> for CardPortInfoInternal {
+    fn from(p: CardPortInfo) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
+}
+
+impl From<CardPortInfoInternal> for CardPortInfo {
+    fn from(p: CardPortInfoInternal) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
+}
+
 /// Stores information about cards.
 ///
 /// Please note that this structure can be extended as part of evolutionary API updates at any time
@@ -1113,6 +1209,18 @@ pub struct CardInfo {
     pub profiles2: *mut *mut CardProfileInfo2,
     /// Pointer to active profile in the array, or `NULL`.
     pub active_profile2: *mut CardProfileInfo2,
+}
+
+impl From<CardInfo> for CardInfoInternal {
+    fn from(p: CardInfo) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
+}
+
+impl From<CardInfoInternal> for CardInfo {
+    fn from(p: CardInfoInternal) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
 }
 
 /// Callback prototype for `Introspector::get_card_info_...()`
@@ -1274,6 +1382,18 @@ pub struct SinkInputInfo {
     pub volume_writable: i32,
     /// Stream format information.
     pub format: *mut ::format::InfoInternal,
+}
+
+impl From<SinkInputInfo> for SinkInputInfoInternal {
+    fn from(p: SinkInputInfo) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
+}
+
+impl From<SinkInputInfoInternal> for SinkInputInfo {
+    fn from(p: SinkInputInfoInternal) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
 }
 
 /// Callback prototype for
@@ -1441,6 +1561,18 @@ pub struct SourceOutputInfo {
     pub format: *mut ::format::InfoInternal,
 }
 
+impl From<SourceOutputInfo> for SourceOutputInfoInternal {
+    fn from(p: SourceOutputInfo) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
+}
+
+impl From<SourceOutputInfoInternal> for SourceOutputInfo {
+    fn from(p: SourceOutputInfoInternal) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
+}
+
 /// Callback prototype for
 /// [`Introspector::get_source_output_info`](struct.Introspector.html#method.get_source_output_info)
 /// and friends.
@@ -1602,6 +1734,18 @@ pub struct SampleInfo {
     pub filename: *const c_char,
     /// Property list for this sample.
     pub proplist: *mut ::proplist::ProplistInternal,
+}
+
+impl From<SampleInfo> for SampleInfoInternal {
+    fn from(p: SampleInfo) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
+}
+
+impl From<SampleInfoInternal> for SampleInfo {
+    fn from(p: SampleInfoInternal) -> Self {
+        unsafe { std::mem::transmute(p) }
+    }
 }
 
 /// Callback prototype for
